<resources>
    <string name="app_name">GroceriesWizard</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="ask_recipe_name">Recipe Name: </string>
    <string name="ingredients">Ingredients: </string>
    <string name="hint_recipe_ingredients">tomato 1 kg, onion 2 pcs</string>
    <string name="how_to_prepare">How to Prepare:</string>
    <string name="hint_how_to_prepare">How to Prepare:Start with chopping tomatoes, put onions in salted water</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="recipe_title_show">RECIPE TITLE SHOW</string>
    <string name="ingredients_show_default">Ingredients</string>
    <string name="show_how_to_prepare">how to prepare</string>
    <string name="popup_delete">Delete</string>
    <string name="popup_edit">Edit</string>
    <string name="popup_unfavorite">unFavorite</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="quantity_0">Quantity: 0</string>
    <string name="unit">Unit</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="quantity">0</string>
    <string name="show_total_unit">show total unit</string>
    <string name="no">No</string>
    <string name="yes">yes</string>
    <string name="unfav_recipe_dialog_ask">Do you want to remove this recipe from favorites?</string>
    <string name="not_available">not available</string>
    <string name="add_image">add image</string>
    <string name="discharge">discharge</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="TitleFoundRecipe">Recipe Found</string>
    <string name="MessageFoundRecipe">We found a recipe in the database.\nWould you like to automatically get its ingredients?</string>
    <string name="add">add</string>
    <string name="home">Home</string>
    <string name="fav">Favorites</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_description">Click here to add Recipe</string>
    <string name="open_menu_description">Click here to see menu</string>
    <string name="done">Done!</string>
    <string name="recipe_need">Which recipe needs this?</string>
    <string name="added_to_cart">Added to Cart!</string>
    <string name="removed_from_cart">Removed from Cart!</string>
    <string name="please_fill_all_fields">Please fill all fields!</string>
    <string name="discharge_recipe_question">Are you sure you want to discharge this recipe?</string>
    <string name="confirm_discharge">Confirm Discharge</string>
    <string name="save">Save</string>
</resources>