<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:titleTextColor="@android:color/black">

        <ImageView
            android:id="@+id/open_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:rotation="90"
            android:src="@drawable/baseline_more_horiz_24"
            android:contentDescription="@string/open_menu_description" />

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonLayout"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/getHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:gravity="center"
            android:layout_weight="3" />

        <Button
            android:id="@+id/getFav"
            android:text="@string/fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="3"/>
        <Button
            android:id="@+id/getShop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping_cart"
            android:layout_weight="3" />

    </LinearLayout>


</RelativeLayout>
