<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/add_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />


    <TextView
        android:id="@+id/ask_recipe"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_alignBottom="@+id/add_image"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="0dp"
        android:layout_toStartOf="@+id/edit_recipe_name"
        android:layout_toEndOf="@+id/add_image"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/ask_recipe_name"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_alignBottom="@+id/add_image"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="0dp"
        android:hint="Recipe Name"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/ask_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_below="@+id/add_image"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/ingredients"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_recipe_ingredients"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/ask_ingredients"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="left"
        android:hint="@string/hint_recipe_ingredients" />

    <TextView
        android:id="@+id/how_to_prepare"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_below="@+id/edit_recipe_ingredients"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/how_to_prepare"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_recipe_how_to_prepare"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/how_to_prepare"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="left"
        android:hint="@string/hint_how_to_prepare" />

    <Button
        android:id="@+id/save_recipe_button"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save_recipe" />

    <ImageButton
        android:id="@+id/delete_recipe_button"
        android:layout_width="160dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@+id/save_recipe_button"
        android:background="@drawable/rounded_button_background"
        android:src="@drawable/ic_delete_icon" />

    <ImageButton
        android:id="@+id/discharge_recipe"
        android:layout_width="27dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:srcCompat="@android:drawable/ic_delete" />


</RelativeLayout>