<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/showRecipeImage"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/recipe_image_default"
        app:layout_constraintBottom_toTopOf="@+id/show_how_to_prepare"
        app:layout_constraintEnd_toStartOf="@+id/show_ingredients"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_title" />

    <TextView
        android:id="@+id/show_title"
        android:layout_width="360dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/recipe_title_show"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/show_ingredients"
        android:layout_width="220dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/ingredients_show_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_title"
        android:singleLine="false"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/show_how_to_prepare"
        android:layout_width="372dp"
        android:layout_height="384dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/show_how_to_prepare"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_ingredients"
        android:singleLine="false"
        android:textSize="15sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>