<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.detail.DetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#EDE2F8"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/show_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="30dp"
                android:singleLine="false"
                android:text="@string/recipe_title_show"
                android:textAllCaps="true"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/showRecipeImage"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="20dp"
                android:importantForAccessibility="no"
                android:padding="10dp"
                android:src="@drawable/recipe_image_default" />


            <TextView
                android:id="@+id/show_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="left"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="false"
                android:text="@string/ingredients_show_default"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/show_how_to_prepare"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="30dp"
                android:singleLine="false"
                android:text="@string/show_how_to_prepare"
                android:textSize="15sp" />


        </LinearLayout>


    </FrameLayout>
</ScrollView>